objects/Payment__c.object
<CustomObject>
    <description>Related to Contract Agreements and used to track all the Payments made to Landowners.</description>
    <fields>
        <fullName>Agreement__c</fullName>
        <label>Agreement</label>
        <referenceTo>Landowner_Agreement__c</referenceTo>
        <relationshipLabel>Payments</relationshipLabel>
        <relationshipName>Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>PMT_Amount_Due__c</fullName>
        <label>PMT Amount Due</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PMT_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Has RES completed its payment obligation?</inlineHelpText>
        <label>PMT Complete?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>PMT_Due_Date__c</fullName>
        <label>PMT Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>PMT_Notes__c</fullName>
        <inlineHelpText>Includes any of the relevant updates, or notes related to this payment.</inlineHelpText>
        <label>PMT Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SEGL_PMT_Type__c</fullName>
        <label>SEGL PMT Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Operations</fullName>
                </value>
                <value>
                    <fullName>Decommissioning</fullName>
                </value>
                <value>
                    <fullName>Obligations</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Payment</label>
    <nameField>
        <displayFormat>PMT-{000000}</displayFormat>
        <label>Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>